--- a/client/src/components/Form/Form.css
+++ b/client/src/components/Form/Form.css
@@ -1,9 +1,3 @@
-body{
-	margin:0;
-	color:#6a6f8c;
-	background:#c8c8c8;
-	font:600 16px/18px 'Open Sans',sans-serif;
-}
 *,:after,:before{box-sizing:border-box}
 .clearfix:after,.clearfix:before{content:'';display:table}
 .clearfix:after{clear:both;display:block}
@@ -75,7 +69,7 @@ a{color:inherit;text-decoration:none}
 	color:#fff;
 	display:block;
 }
-.login-form .group .input,
+/* .login-form .group .input, */
 .login-form .group .button{
 	border:none;
 	padding:15px 20px;
@@ -138,6 +132,16 @@ a{color:inherit;text-decoration:none}
 }
 .login-html .sign-up:checked + .tab + .login-form .sign-up-htm{
 	transform:rotate(0);
+}
+
+.dd-list-group{
+	width: 300px;
+	margin: 10px auto;
+}
+
+.form-control{
+	width:300px;
+	margin: 10px auto;
 }
 
 .hr{
